# garden-chicken_coop

./: .gitignore  README.md
arduino/: CMakeLists.txt  ardClass.drawio  protocol.md  serial_example1.py  start.md
arduino/include/: arduino.h  fileHandler.h  serialib.h  utils.h
arduino/sketches/: getInt.ino  inArduino.ino
arduino/src/: FileHandler.cpp  arduino.cpp  main.cpp  utils.cpp
pi-server/: start.md
